FIX: uses overflow hidden body on iOS
This hack improves behavior on iOS and should for example limit body scrolling when doing text selection.

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -5,3 +5,7 @@
 @import "mobile/select-kit/_index";
 @import "mobile/float-kit/_index";
 @import "mobile/form-kit/_index";
+
+body {
+  overflow: hidden;
+}
